@@ -8,7 +8,6 @@ xml
 libepc-decl-list.txt
 libepc-decl.txt
 libepc-overrides.txt
-libepc-sections.txt
 libepc-undocumented.txt
 libepc-unused.txt
 libepc.args
