@@ -1,0 +1,65 @@
+<SECTION>
+<FILE>dispatcher</FILE>
+EpcDispatcherPrivate
+EpcDispatcherClass
+<TITLE>EpcDispatcher</TITLE>
+EpcDispatcher
+epc_dispatcher_new
+epc_dispatcher_add_service
+epc_dispatcher_add_service_subtype
+epc_dispatcher_set_service_details
+<SUBSECTION Standard>
+EPC_DISPATCHER
+EPC_IS_DISPATCHER
+EPC_TYPE_DISPATCHER
+epc_dispatcher_get_type
+EPC_DISPATCHER_CLASS
+EPC_IS_DISPATCHER_CLASS
+EPC_DISPATCHER_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>publisher</FILE>
+EPC_PUBLISHER_SERVICE_NAME
+EpcPublisherPrivate
+EpcPublisherClass
+<TITLE>EpcPublisher</TITLE>
+EpcPublisher
+epc_publisher_new
+epc_publisher_set_name
+epc_publisher_get_name
+epc_publisher_get_domain
+epc_publisher_get_service
+epc_publisher_add
+epc_publisher_add_file
+epc_publisher_run
+epc_publisher_run_async
+epc_publisher_quit
+<SUBSECTION Standard>
+EPC_PUBLISHER
+EPC_IS_PUBLISHER
+EPC_TYPE_PUBLISHER
+epc_publisher_get_type
+EPC_PUBLISHER_CLASS
+EPC_IS_PUBLISHER_CLASS
+EPC_PUBLISHER_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>consumer</FILE>
+EpcConsumerPrivate
+EpcConsumerClass
+<TITLE>EpcConsumer</TITLE>
+EpcConsumer
+epc_consumer_new
+epc_consumer_lookup
+<SUBSECTION Standard>
+EPC_CONSUMER
+EPC_IS_CONSUMER
+EPC_TYPE_CONSUMER
+epc_consumer_get_type
+EPC_CONSUMER_CLASS
+EPC_IS_CONSUMER_CLASS
+EPC_CONSUMER_GET_CLASS
+</SECTION>
+
